# AI4Vuln

./: CMakeLists.txt  README.md
CMake/: CodebaseOptions.cmake  PlatformOptions.cmake  UtilityFunctions.cmake
cl/AI4VULN/: AI4VULN.rul.md  CMakeLists.txt
cl/AI4VULN/inc/: messages.h
cl/AI4VULN/inc/checker/: JavaSymbolicChecker.h
cl/AI4VULN/inc/listener/: JavaSymbolicCheckerWarningListener.h
cl/AI4VULN/inc/rules/: JavaSymbolicCCEChecker.h  JavaSymbolicDBZChecker.h  JavaSymbolicINFChecker.h  JavaSymbolicIOBChecker.h  JavaSymbolicNASChecker.h  JavaSymbolicNPEChecker.h  SymbolicRuleChecker.h
cl/AI4VULN/src/: main.cpp
cl/AI4VULN/src/checker/: JavaSymbolicChecker.cpp
cl/AI4VULN/src/listener/: JavaSymbolicCheckerWarningListener.cpp
cl/AI4VULN/src/rules/: JavaSymbolicCCEChecker.cpp  JavaSymbolicDBZChecker.cpp  JavaSymbolicINFChecker.cpp  JavaSymbolicIOBChecker.cpp  JavaSymbolicNASChecker.cpp  JavaSymbolicNPEChecker.cpp  SymbolicRuleChecker.cpp
demo/: CMakeLists.txt
inc/: AdjMatrixGraph.h  AsgCommon.h  Environment.h  ErrorCodes.h  Exception.h  LanguageCommon.h  MainCommon.h  ReleaseVersion.h
lib/cfg/inc/: cfg.h  messages.h
lib/common/inc/: Arguments.h  DirectoryFilter.h  FileSup.h  PlatformDependentDefines.h  Stat.h  StringSup.h  WriteMessage.h  XercesSup.h  messages.h  sllist.h
lib/csi/inc/: HeaderData.h  PropertyData.h  csi.h  messages.h
lib/graph/inc/: Attribute.h  BGraph.h  BoostInit.h  Edge.h  Exceptions.h  Node.h  graph.h
lib/graph/privinc/: GraphSchemaReader.h  GraphXmlHandler.h  messages.h
lib/graphsupport/inc/: CoverageBuilder.h  CsvExporter.h  GraphConstants.h  GraphIndexer.h  GraphRangeIndexer.h  JVMuniquenameGenerator.h  Metric.h  MetricSum.h  RulBuilder.h  SarifExporter.h  messages.h
lib/io/inc/: BinaryIO.h  CsvIO.h  GraphmlIO.h  IO.h  SimpleXmlIO.h  ZippedIO.h  ioBase.h  messages.h
lib/java/inc/: Common.h  Constant.h  Factory.h  Filter.h  Forwards.h  JavaException.h  ListIterator.h  Range.h  ReverseEdges.h  Types.h  (+2 more)
lib/symbolic/: CMakeLists.txt
lib/symbolic/inc/: common.h  messages.h
lib/symbolic/inc/algorithms/: AbstractSymbolicExecutor.h  BreadthFirstSearchStrategy.h  DepthFirstSearchStrategy.h  SearchStrategy.h  StateExpanderInterface.h  SymbolicEngine.h  SymbolicEngineInterface.h
lib/symbolic/inc/constraint/: Constraint.h  ConstraintBuilder.h  ConstraintSolver.h  ConstraintSolverExpr.h  NodeIdSymbolIdentifier.h  SymbolIdentifier.h
lib/symbolic/inc/definition/: Address.h  BaseInterface.h  Definition.h
lib/symbolic/inc/listener/: StateListener.h  WarningListener.h
lib/symbolic/inc/printer/: StateTreeToGraphml.h
lib/symbolic/inc/structure/: Configuration.h  ExceptionalStateException.h  Locals.h  Memory.h  ProxyTree.h  ProxyTree.hpp  StackTrace.h  State.h  StateFactory.h  SymbolicColumbusException.h  SymbolicCommon.h
lib/symbolic/inc/unused/: BoolConstConstraint.h  BoolConstraint.h  ConstraintFactory.h  NullValueDefinition.h  NumericConstConstraint.h  NumericConstraint.h  ReferenceConstConstraint.h  ReferenceConstraint.h  StringConstraint.h  Symbol.h  SymbolFactory.h
lib/symbolic/inc/utils/: utils.h
lib/symbolic/src/: common.cpp
lib/symbolic/src/algorithms/: AbstractSymbolicExecutor.cpp  BreadthFirstSearchStrategy.cpp  DepthFirstSearchStrategy.cpp  SymbolicEngine.cpp  SymbolicEngineInterface.cpp
lib/symbolic/src/constraint/: Constraint.cpp  ConstraintBuilder.cpp  ConstraintSolver.cpp  ConstraintSolverExpr.cpp  NodeIdSymbolIdentifier.cpp  SymbolIdentifier.cpp
lib/symbolic/src/definition/: Definition.cpp
lib/symbolic/src/listener/: StateListener.cpp
lib/symbolic/src/printer/: StateTreeToGraphml.cpp
lib/symbolic/src/structure/: Configuration.cpp  Locals.cpp  Memory.cpp  StackTrace.cpp  State.cpp  StateFactory.cpp  SymbolicColumbusException.cpp
lib/symbolic/src/unused/: BoolConstConstraint.cpp  BoolConstraint.cpp  Common.cpp  ConstraintFactory.cpp  NumericConstConstriant.cpp  NumericConstraint.cpp  ReferenceConstConstraint.cpp  ReferenceConstraint.cpp  StringConstConstraint.cpp  StringConstraint.cpp  Symbol.cpp  SymbolFactory.cpp
lib/symbolic_java/: CMakeLists.txt
lib/symbolic_java/inc/: SMTFunctionStrings.h  common.h  messages.h
lib/symbolic_java/inc/algorithms/: AsgUtils.h  SymbolicExecutor.h  SymbolicTypesPreVisitor.h
lib/symbolic_java/inc/constraint/: Z3Constraint.h  Z3ConstraintBuilder.h  Z3ConstraintExpression.h  Z3Solver.h
lib/symbolic_java/inc/definition/: Array.h  BooleanValueDefinition.h  ByteValueDefinition.h  CharValueDefinition.h  DefinitionDispatcher.h  DefinitionDispatcherTargetInterface.h  DefinitionFactory.h  DoubleValueDefinition.h  FloatValueDefinition.h  IntValueDefinition.h  LongValueDefinition.h  Object.h  Reference.h  ShortValueDefinition.h  SymbolDefinition.h  ValueDefinition.h  ValueDefinition.hpp
lib/symbolic_java/inc/listener/: CsvStateListener.h  JavaLimWriteListener.h  JavaStateListener.h  JsonOutputWriter.h  PrintStateListener.h  TxtOutputWriter.h
lib/symbolic_java/inc/printer/: JavaStateTreeElementPrinter.h
lib/symbolic_java/inc/structure/: StackTraceJava.h  StateFactoryJava.h  StateJava.h
lib/symbolic_java/src/algorithms/: AsgUtils.cpp  SymbolicExecutor.cpp  SymbolicTypesPreVisitor.cpp
lib/symbolic_java/src/constraint/: Z3Constraint.cpp  Z3ConstraintBuilder.cpp  Z3ConstraintExpression.cpp  Z3Solver.cpp
lib/symbolic_java/src/definition/: .Object.cpp.swp  Array.cpp  BooleanValueDefinition.cpp  ByteValueDefinition.cpp  CharValueDefinition.cpp  DefinitionFactory.cpp  DoubleValueDefinition.cpp  FloatValueDefinition.cpp  IntValueDefinition.cpp  LongValueDefinition.cpp  Object.cpp  Object_BACKUP_251348.cpp  Object_BASE_251348.cpp  Object_LOCAL_251348.cpp  Object_REMOTE_251348.cpp  Reference.cpp  ShortValueDefinition.cpp  SymbolDefinition.cpp
lib/symbolic_java/src/listener/: CsvStateListener.cpp  JavaLimWriteListener.cpp  JavaStateListener.cpp  JsonOutputWriter.cpp  PrintStateListener.cpp  TxtOutputWriter.cpp
lib/symbolic_java/src/printer/: JavaStateTreeElementPrinter.cpp
lib/symbolic_java/src/structure/: StackTraceJava.cpp  StateFactoryJava.cpp  StateJava.cpp
(+306 files in other folders)
